--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   },
+  "homepage": "https://drewdemo.github.io/tcl-promo-new",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
